--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/redux-immutable": "^4.0.1",
     "@types/redux-thunk": "^2.1.0",
+    "@types/swiper": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "autoprefixer": "^9.6.1",
@@ -61,6 +62,7 @@
     "style-loader": "^0.23.1",
     "sugarss": "^2.0.0",
     "ts-loader": "^6.0.2",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.5.3",
     "webpack": "^4.32.1",
     "webpack-bundle-analyzer": "^3.4.1",
@@ -75,6 +77,8 @@
   "dependencies": {
     "animejs": "^3.0.1",
     "antd-mobile": "^2.2.13",
+    "axios": "^0.19.0",
+    "hoist-non-react-statics": "^3.3.0",
     "immutable": "^4.0.0-rc.12",
     "jsqr": "^1.2.0",
     "lodash": "^4.17.15",
@@ -86,6 +90,7 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "swiper": "^4.5.1"
   }
 }
