--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/animejs": "^2.0.2",
+    "@types/howler": "^2.1.1",
     "@types/lodash": "^4.14.138",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
@@ -79,6 +80,7 @@
     "antd-mobile": "^2.2.13",
     "axios": "^0.19.0",
     "hoist-non-react-statics": "^3.3.0",
+    "howler": "^2.1.2",
     "immutable": "^4.0.0-rc.12",
     "jsqr": "^1.2.0",
     "lodash": "^4.17.15",
