--- a/package.json
+++ b/package.json
@@ -29,13 +29,12 @@
   "devDependencies": {
     "@types/animejs": "^2.0.2",
     "@types/howler": "^2.1.1",
-    "@types/lodash": "^4.14.138",
+    "@types/lodash": "^4.14.139",
     "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.0.8",
+    "@types/react-redux": "^7.1.2",
     "@types/react-router-config": "^5.0.0",
     "@types/react-router-dom": "^4.3.3",
-    "@types/redux-immutable": "^4.0.1",
     "@types/redux-thunk": "^2.1.0",
     "@types/swiper": "^4.4.5",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
@@ -81,17 +80,17 @@
     "axios": "^0.19.0",
     "hoist-non-react-statics": "^3.3.0",
     "howler": "^2.1.2",
-    "immutable": "^4.0.0-rc.12",
+    "immer": "^4.0.0",
     "jsqr": "^1.2.0",
     "lodash": "^4.17.15",
     "paho-mqtt": "^1.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.3",
+    "react-redux": "^7.1.1",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.0",
+    "react-window": "^1.8.5",
     "redux": "^4.0.1",
-    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "swiper": "^4.5.1"
   }
